# marrow-symphony

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTEXT.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  tsconfig.node.json
.agents/skills/code-review/: README.md  REFERENCE.md
.claude/skills/code-review/: SKILL.md
docs/adr/: 0001-symphony-is-an-ancestor-not-a-contract.md  0002-runner-agnostic-interactive-terminals.md  0003-local-first-sqlite-with-materialized-context.md  0004-trust-posture-inherit-user-permissions.md  0005-attention-is-best-effort-not-protocol-read.md  0006-three-view-ia-with-attention-feed.md  0007-runner-registry-kind-keyed-editable-presets.md  0008-needs-input-detection-terminal-signals-and-notify-sidecar.md  0009-marrow-sidecar-as-agent-context-bus.md  0010-workspace-lifecycle-hooks.md
docs/design-docs/: core-beliefs.md  index.md  linear-integration.md  reference-design.md  ui-io-spec.md  visual-language.md
docs/exec-plans/active/: 0001-scaffold-and-first-slice.md  0002-full-functional-ui.md  0002-slices.md  0003-worktree-isolation.md
docs/references/: harness-engineering-codex-agent-first-world.md
marrow_symphony_reference_design/: .design-canvas.state.json  App Shell.html  Board v2.html  Board.html  Cockpit.html  Feed Screen.html  Issue Page.html
marrow_symphony_reference_design/src/: board-v2.jsx  board.jsx  canvas-app.jsx  chrome.jsx  cockpit.jsx  feed-canvas-app.jsx  feed-context.jsx  feed-data.js  feed-parts.jsx  feed-screen.jsx  issue-page.jsx  shader.jsx  shell-data.js  shell.jsx  views-data.js
marrow_symphony_reference_design/styles/: colors_and_type.css
src/: App.tsx  api.ts  index.css  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20260601000000_initial_store.sql  20260602000000_full_functional_ui.sql  20260603000000_linear_links_and_project_edit.sql  20260604000000_linear_connection.sql  20260605000000_linear_credential_to_keychain.sql
src-tauri/src/: hooks.rs  lib.rs  linear.rs  main.rs  models.rs  sessions.rs  sidecar.rs  state.rs  store.rs  workspace.rs
src/components/: Shader.tsx  TerminalPane.tsx
