[package]
name = "marrow-symphony"
version = "0.1.0"
description = "Marrow Symphony — run interactive coding-agent CLIs against your work"
authors = ["Marrow Symphony"]
license = "MIT"
edition = "2021"
default-run = "marrow-symphony"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "marrow_symphony_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9.0", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
tokio = { version = "1.52.3", features = ["full"] }
portable-pty = "0.9.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Random OAuth `state` + constant-time comparison (already in the tree via rustls).
ring = "0.17"

# The Linear credential is held in the OS keychain, never in the DB. Each platform
# compiles only its own native store, so no cross-platform secret-store deps leak in.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
